tests/badcalibrate.out
./badcalibrate.svx:4:25: error: Scale factor must be non-zero
./badcalibrate.svx:5:34: error: Scale factor must be non-zero
./badcalibrate.svx:6:20: error: Scale factor must be non-zero
./badcalibrate.svx:8: error: Can't calibrate angular and length quantities together

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 0 warning(s) and 4 error(s) - no output files produced.
